--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="nav-texts">
                 <ul>
                     <a href="index.html" class="active"><li class="active">Home</li></a>
-                    <a href="news.html"><li>News</li></a>
-                    <a href="mixtape.html"><li>Mixtapes</li></a>
-                    <a href="upload-songs.html"><li>Upload Songs</li></a>
-                    <a href="contact.html"><li>Contact us</li></a>
+                    <a href="news.html"><li class="active-black">News</li></a>
+                    <a href="mixtape.html"><li class="active-black">Mixtapes</li></a>
+                    <a href="upload-songs.html"><li class="active-black">Upload Songs</li></a>
+                    <a href="contact.html"><li class="active-black">Contact us</li></a>
                 </ul>
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
@@ -77,7 +77,7 @@
             </div>
             <div class="slider-container">
                 <div class="slider-wrapper">
-                    <a href="#">
+                    <a href="news.html">
                         <div class="news-img">
                             <a href="#"><img src="assets/img/Rectangle 5-1.png" alt=""></a>
                             <div class="news-text">
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="news.html">
                         <div class="news-img">
                             <a href="#"><img src="assets/img/Rectangle 6 (2).png" alt=""></a>
                             <div class="news-text">
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="news.html">
                         <div class="news-img">
                             <a href="#"><img src="assets/img/Rectangle 7 (2).png" alt=""></a>
                             <div class="news-text">
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="news.html">
                         <div class="news-img">
                             <a href="#"><img src="assets/img/Rectangle 8 (2).png" alt=""></a>
                             <div class="news-text">
@@ -135,7 +135,7 @@
             <div class="line"></div>
         </div>
         <div class="trending-container">
-            <a href="#">
+            <a href="download.html">
                 <div class="trending-box">
                     <img src="assets/img/Rectangle 5.png" alt="">
                     <div class="text">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="download.html">
                 <div class="trending-box">
                     <img src="assets/img/Rectangle 6.png" alt="">
                     <div class="text">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="download.html">
                 <div class="trending-box">
                     <img src="assets/img/Rectangle 7.png" alt="">
                     <div class="text">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="download.html">
                 <div class="trending-box">
                     <img src="assets/img/Rectangle 8.png" alt="">
                     <div class="text">
@@ -186,7 +186,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -198,7 +198,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -210,7 +210,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -222,7 +222,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -234,7 +234,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -246,7 +246,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -258,7 +258,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -270,7 +270,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -282,7 +282,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -294,7 +294,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -306,7 +306,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -318,7 +318,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -330,7 +330,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -342,7 +342,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -354,7 +354,7 @@
                 <div class="left">
                     <img src="assets/img/Rectangle 14.png" alt="">
                 </div>
-                <a href="#">
+                <a href="download.html">
                     <div class="right">
                         <p>Download music: Moses Bliss - Daddy wey dey pamper</p>
                         <p>November 5th, 2022</p>
@@ -416,10 +416,10 @@
                 <div class="head">Follow us</div>
                 <div class="body">
                     <div class="footer-icons">
-                        <a href="#"><i class="fa-brands fa-facebook-f fa-lg circle-icon"></i></a>
+                        <a href="https://www.facebook.com/theextollersmusic?mibextid=ZbWKwL"><i class="fa-brands fa-facebook-f fa-lg circle-icon"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter fa-lg circle-icon"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram fa-lg circle-icon"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube fa-lg circle-icon"></i></a>
+                        <a href="https://www.instagram.com/theextollersmusic/"><i class="fa-brands fa-instagram fa-lg circle-icon"></i></a>
+                        <a href="https://www.youtube.com/channel/UCGebTPYTFOXE3rMUgydhAWQ"><i class="fa-brands fa-youtube fa-lg circle-icon"></i></a>
                     </div>
                 </div>
             </div>
