--- a/mixtape.html
+++ b/mixtape.html
@@ -18,11 +18,11 @@
             </div>
             <div class="nav-texts">
                 <ul>
-                    <a href="index.html"><li>Home</li></a>
-                    <a href="news.html"><li>News</li></a>
+                    <a href="index.html"><li class="active-black">Home</li></a>
+                    <a href="news.html"><li class="active-black">News</li></a>
                     <a href="mixtape.html" class="active"><li>Mixtapes</li></a>
-                    <a href="upload-songs.html"><li>Upload Songs</li></a>
-                    <a href="contact.html"><li>Contact us</li></a>
+                    <a href="upload-songs.html"><li class="active-black">Upload Songs</li></a>
+                    <a href="contact.html"><li class="active-black">Contact us</li></a>
                 </ul>
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
@@ -183,10 +183,10 @@
                 <div class="head">Follow us</div>
                 <div class="body">
                     <div class="footer-icons">
-                        <a href="#"><i class="fa-brands fa-facebook-f fa-lg circle-icon"></i></a>
+                        <a href="https://www.facebook.com/theextollersmusic?mibextid=ZbWKwL"><i class="fa-brands fa-facebook-f fa-lg circle-icon"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter fa-lg circle-icon"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram fa-lg circle-icon"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube fa-lg circle-icon"></i></a>
+                        <a href="https://www.instagram.com/theextollersmusic/"><i class="fa-brands fa-instagram fa-lg circle-icon"></i></a>
+                        <a href="https://www.youtube.com/channel/UCGebTPYTFOXE3rMUgydhAWQ"><i class="fa-brands fa-youtube fa-lg circle-icon"></i></a>
                     </div>
                 </div>
             </div>
